<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.augmentis.ayp.calculator.CalActivity">



    <TextView
        android:id="@+id/secondary_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/calculateTxt"
        android:gravity="center"
        android:textSize="23dp"/>

    <TextView
        android:id="@+id/primary_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/calculate1Txt"
        android:gravity="center"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="30dp"
            android:text="@string/reset_btn"
            android:id="@+id/c_btn"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="30dp"
            android:text="@string/plus_btn"
            android:id="@+id/plus_btn"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="30dp"
            android:text="@string/minus_btn"
            android:id="@+id/minus_btn"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/multiply_btn"
            android:id="@+id/multiply_btn"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/one_btn"
            android:id="@+id/button1"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/two_btn"
            android:id="@+id/button2"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/three_btn"
            android:id="@+id/button3"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/divide_btn"
            android:id="@+id/divide_btn"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/four_btn"
            android:id="@+id/button4"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/five_btn"
            android:id="@+id/button5"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/six_btn"
            android:id="@+id/button6"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="30dp"
            android:text="@string/as_btn"
            android:id="@+id/as_btn"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/seven_btn"
            android:id="@+id/button7"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/eight_btn"
            android:id="@+id/button8"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/nine_btn"
            android:id="@+id/button9"
            android:layout_gravity="center_vertical"/>
        <Button
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:textSize="25dp"
            android:text="@string/zero_btn"
            android:id="@+id/button0"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>
